# seed-phrase-generator

./: LICENSE  README.md  flake.nix  readme.md  seed-phrase-generator.cabal  seedPhraseGenerator.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  seedPhraseGenerator-0.1.0.0-inplace.conf
src/: SeedPhrase.hs
